[package]
name = "dice-bag"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"
license-file = "LICENSE.txt"
homepage = "https://codeberg.org/brotherwolf/dice-bag"
description = "This library uses standard RPG notation for generating dice rolls producing a total score, but also a break down of all the rolls should they be needed."
repository = "https://codeberg.org/brotherwolf/dice-bag"
readme = "README.md"

[dependencies]
rand = "0.8"
regex = "1.10"

[lib]
name = "dice"
path = "src/lib.rs"
